# py2latex

./: .bumpversion.cfg  .imgbotconfig  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  __pkginfo__.py  formate.toml  git_helper.yml  lint_roller.sh  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  stubs.txt  tox.ini
.ci/: copy_pypi_2_github.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
demo/: Chapter1.tex  Chapter2.tex  demo.py  glossary.yaml  introduction.md  text.md
doc-source/: Building.rst  Source.rst  conf.py  contributing.rst  docs.rst  index.rst  license.rst  requirements.txt
doc-source/api/: colors.rst  core.rst  formatting.rst  glossaries.rst  packages.rst  py2latex.rst  sectioning.rst  siunit.rst  tables.rst
latex_tools/: __init__.py  core.py  formatting.py  tables.py
latex_tools/templates/: longtable.tex  table.tex
old/: markdown2latex.py  markdown_regex.py  mdx_latex.py
py2latex/: __init__.py  colors.py  core.py  formatting.py  glossaries.py  markdown_parser.py  mdx_latex.py  packages.py  sectioning.py  siunit.py  tables.py  templates.py
py2latex/markdown_parser/: __init__.py  images.py  links.py  maths.py  tables.py  utils.py
py2latex/templates/: longtable.tex  main.tex  sectioning.tex  subtables.tex  table.tex  tabular.tex
