[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "py2latex"
version = "0.0.6"
description = "Create LaTeX documents with Python, Markdown and Jinja2."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/py2latex"
"Issue Tracker" = "https://github.com/domdfcoding/py2latex/issues"
"Source Code" = "https://github.com/domdfcoding/py2latex"
Documentation = "https://py2latex.readthedocs.io/en/latest"

[tool.setuptools]
zip-safe = false
include-package-data = true
platforms = [ "Windows", "macOS", "Linux",]

[tool.whey]
base-classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed",
]
python-versions = [ "3.7", "3.8", "3.9",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
additional-files = [ "recursive-include py2latex/templates *.tex",]

[tool.importcheck]
always = [
    "py2latex",
    "py2latex.markdown_parser",
    "py2latex.markdown_parser.images",
    "py2latex.markdown_parser.links",
    "py2latex.markdown_parser.maths",
    "py2latex.markdown_parser.tables",
    "py2latex.markdown_parser.utils",
    "py2latex.colors",
    "py2latex.core",
    "py2latex.formatting",
    "py2latex.glossaries",
    "py2latex.packages",
    "py2latex.sectioning",
    "py2latex.siunit",
    "py2latex.tables",
    "py2latex.templates",
]

[tool.sphinx-pyproject]
github_username = "domdfcoding"
github_repository = "py2latex"
author = "Dominic Davis-Foster"
project = "py2LaTeX"
copyright = "2020 Dominic Davis-Foster"
language = "en"
package_root = "py2latex"
extensions = [
    "sphinx_toolbox",
    "sphinx_toolbox.more_autodoc",
    "sphinx_toolbox.more_autosummary",
    "sphinx_toolbox.documentation_summary",
    "sphinx_toolbox.tweaks.param_dash",
    "sphinxcontrib.toctree_plus",
    "sphinx_toolbox.tweaks.latex_layout",
    "sphinx_toolbox.tweaks.latex_toc",
    "sphinx.ext.intersphinx",
    "sphinx.ext.mathjax",
    "sphinxcontrib.extras_require",
    "sphinx.ext.todo",
    "notfound.extension",
    "sphinx_copybutton",
    "sphinxcontrib.default_values",
    "sphinx_debuginfo",
    "sphinx_licenseinfo",
    "seed_intersphinx_mapping",
    "html_section",
]
gitstamp_fmt = "%d %b %Y"
templates_path = [ "_templates",]
html_static_path = [ "_static",]
source_suffix = ".rst"
master_doc = "index"
suppress_warnings = [ "image.nonlocal_uri",]
pygments_style = "default"
html_theme = "domdf_sphinx_theme"
html_theme_path = [ "../..",]
html_show_sourcelink = true
toctree_plus_types = [
    "class",
    "confval",
    "data",
    "directive",
    "enum",
    "exception",
    "flag",
    "function",
    "namedtuple",
    "protocol",
    "role",
    "typeddict",
]
add_module_names = false
hide_none_rtype = true
all_typevars = true
overloads_location = "bottom"
html_codeblock_linenos_style = "table"
autodoc_exclude_members = [
    "__dict__",
    "__class__",
    "__dir__",
    "__weakref__",
    "__module__",
    "__annotations__",
    "__orig_bases__",
    "__parameters__",
    "__subclasshook__",
    "__init_subclass__",
    "__attrs_attrs__",
    "__init__",
    "__new__",
    "__getnewargs__",
    "__abstractmethods__",
    "__hash__",
]

[tool.mypy]
python_version = "3.7"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dependency-dash."doc-source/requirements.txt"]
order = 30
include = false
